Fixed card size and image stretched horizontally

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,6 +6,9 @@
  display: contents;
 }
 .disp_i {
+  .card {
+    max-width: 18rem !important;
+  }
   .card-body{
     padding-top: 0px !important;
   }
